[gd_scene load_steps=12 format=3 uid="uid://blyx4kinjtp4j"]

[ext_resource type="LabelSettings" uid="uid://5yob7nbguq36" path="res://label_48.tres" id="1_4kt86"]
[ext_resource type="FontFile" uid="uid://due6jbyye53ld" path="res://Idle+Tycoon+Assets/Idle Assets/Fonts/font_score.ttf" id="1_37got"]
[ext_resource type="Script" uid="uid://hf0pngl26ahn" path="res://Scenes/upgrade_panel.gd" id="1_egla8"]
[ext_resource type="Texture2D" uid="uid://b3s818vqndxi" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/UI/star.png" id="3_okr1d"]
[ext_resource type="Texture2D" uid="uid://dk27akamgg26o" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/UI/coin_gold.png" id="4_egla8"]
[ext_resource type="Texture2D" uid="uid://5t0n6ofraq0n" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/UI/contrast.png" id="5_okr1d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gersm"]
bg_color = Color(0.779291, 0.779291, 0.779291, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.187176, 0.187176, 0.187176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v3stg"]
font = ExtResource("1_37got")
font_size = 70
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxut3"]
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.122252, 0.122252, 0.122252, 1)
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6jcj"]
bg_color = Color(2.88785e-06, 0.646656, 0.908697, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egla8"]
bg_color = Color(0.0414582, 0.574562, 0.6378, 1)

[node name="UpgradePanel" type="Control"]
custom_minimum_size = Vector2(550, 650)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -530.0
offset_bottom = -1270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_egla8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gersm")

[node name="Label" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 20.0
offset_right = 42.0
offset_bottom = 66.0
grow_horizontal = 2
text = "LV.0"
label_settings = ExtResource("1_4kt86")

[node name="Label2" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 81.0
offset_right = 90.0
offset_bottom = 127.0
grow_horizontal = 2
text = "COFFEEE"
label_settings = SubResource("LabelSettings_v3stg")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Star_1" type="TextureRect" parent="Panel/HBoxContainer"]
modulate = Color(0.396889, 0.396889, 0.396889, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_okr1d")
expand_mode = 1
stretch_mode = 5

[node name="Star_2" type="TextureRect" parent="Panel/HBoxContainer"]
modulate = Color(0.396889, 0.396889, 0.396889, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_okr1d")
expand_mode = 1
stretch_mode = 5

[node name="Star_3" type="TextureRect" parent="Panel/HBoxContainer"]
modulate = Color(0.396889, 0.396889, 0.396889, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_okr1d")
expand_mode = 1
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 36)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 101.0
offset_right = 210.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hxut3")
theme_override_styles/fill = SubResource("StyleBoxFlat_n6jcj")
max_value = 1.0
show_percentage = false

[node name="Profit" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = 182.0
offset_right = -175.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Panel/Profit"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("4_egla8")
expand_mode = 1
stretch_mode = 5

[node name="ProfitText" type="Label" parent="Panel/Profit"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = ExtResource("1_4kt86")

[node name="Preparacion" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 138.0
offset_top = 178.0
offset_right = 217.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Panel/Preparacion"]
modulate = Color(0.0568326, 0.599039, 0.677061, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("5_okr1d")
expand_mode = 1
stretch_mode = 5

[node name="PreparacionText" type="Label" parent="Panel/Preparacion"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
label_settings = ExtResource("1_4kt86")

[node name="Button" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 75)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -153.0
offset_top = -488.0
offset_right = 147.0
offset_bottom = -373.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_egla8")
text = "50"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
